--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             padding: 25px 250px;
         }
     </style>
-  <script type="module" crossorigin src="/assets/index.124ba252.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.505821bd.js">
+  <script type="module" crossorigin src="/fnrepeats/assets/index.124ba252.js"></script>
+  <link rel="modulepreload" href="/fnrepeats/assets/vendor.505821bd.js">
 </head>
 
 <body>
