--- a/pages/documentation/src/index.html
+++ b/pages/documentation/src/index.html
@@ -5,15 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="cache-control" content="no-cache">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="assets/32x32.png">
     <title>Fn Repeats</title>
-    <style>
-        html {
-            background-color: lightgray;
-        }
-        body {
-            padding: 25px 250px;
-        }
-    </style>
 </head>
 
 <body>
